# msl_pu_website

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
src/: db.sqlite3  manage.py  pyproject.toml
src/about_msl/: apps.py  models.py  wagtail_hooks.py
src/about_msl/migrations/: 0001_initial.py  0002_alter_historypage_options.py  0002_seasonparameters_seasonrounds_seasonteams_and_more.py  0003_alter_seasonteams_season.py  0004_alter_seasonparameters_options_and_more.py  0005_alter_seasonparameters_options_and_more.py  0006_rename_caregories_seasonrounds_categories.py  0007_alter_seasonrounds_date_registration_and_more.py
src/base/templatetags/: navigation_tags.py
src/collected_static/: staticfiles.json
src/collected_static/css/: msl_pu_website.f9a68ec4e809.css
src/home/: models.py
src/msl_about/: apps.py  forms.py  models.py  views.py  wagtail_hooks.py
src/msl_auth/: apps.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py  wagtail_hooks.py
src/msl_enroll/: apps.py  forms.py  models.py
src/msl_news/: apps.py  facebook.py  models.py  signals.py  tests.py  urls.py  views.py  wagtail_hooks.py
src/msl_pu_website/: context_processors.py  urls.py  wsgi.py
src/msl_results/: apps.py  models.py  round_results_preprocessor.py  views.py  wagtail_hooks.py
src/msl_tips/: admin.py  apps.py  models.py  services.py  urls.py  views.py  wagtail_hooks.py
src/news/: models.py
src/util/: apps.py  auth.py  magic_link_auth.py  models.py  release_notes.py  urls.py  views.py
src/util/fixtures/: teams.json  (+4 more)
(+102 files in other folders)
