[project]
dependencies = [
    "Django",
    "django-widget-tweaks",
    "wagtail",
    "pillow>=11.1.0",
    "pillow-heif>=0.21.0",
    "pandas>=2.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.2.2"
]
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
]
