[project]
dependencies = [
    "Django",
    "django-widget-tweaks",
    "django-sesame>=3.2.3",
    "wagtail",
    "pillow>=11.1.0",
    "pillow-heif>=0.21.0",
    "pandas>=2.3.0",
    "requests>=2.31.0",
    "python-dotenv>=1.2.2"
]
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "msl_pu_website.settings.dev"
